// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpenseList with empty message 1`] = `
<div
  className="content-container"
>
  <div
    className="list__header"
  >
    <div
      className="show-for-mobile"
    >
      Expenses
    </div>
    <div
      className="show-for-desktop"
    >
      Expense
    </div>
    <div
      className="show-for-desktop"
    >
      Amount
    </div>
  </div>
  <div
    className="list__body"
  >
    <div
      className="list__item list__item--message"
    >
      <span>
        No expenses
      </span>
    </div>
  </div>
</div>
`;

exports[`should render ExpenseList with expenses 1`] = `
<div
  className="content-container"
>
  <div
    className="list__header"
  >
    <div
      className="show-for-mobile"
    >
      Expenses
    </div>
    <div
      className="show-for-desktop"
    >
      Expense
    </div>
    <div
      className="show-for-desktop"
    >
      Amount
    </div>
  </div>
  <div
    className="list__body"
  >
    <ExpenseListItem
      amount={193}
      createdAt={0}
      description="Gum"
      id="1"
      key="1"
      note=""
    />
    <ExpenseListItem
      amount={13411}
      createdAt={-345600000}
      description="DUUUH"
      id="2"
      key="2"
      note=""
    />
    <ExpenseListItem
      amount={19161613}
      createdAt={345600000}
      description="Boring"
      id="3"
      key="3"
      note="booooored!"
    />
  </div>
</div>
`;
